removed spaces, added Procfile

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -24,6 +24,15 @@ h1{
   font-size: 3em;
 }
 
+.invite{
+  position: relative;
+  font-family: 'Loved by the King', cursive;
+  bottom: 260px;
+  left: 740px;
+  z-index: 15;
+  font-size: 3em;
+}
+
 .speech_bubble {
   position: absolute;
   bottom: 100px;
