--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -16,16 +16,7 @@ h1{
 }
 
 .invite{
-  position: relative;
-  font-family: 'Loved by the King', cursive;
-  bottom: 260px;
-  left: 740px;
-  z-index: 15;
-  font-size: 3em;
-}
-
-.invite{
-  position: relative;
+  position: absolute;
   font-family: 'Loved by the King', cursive;
   bottom: 260px;
   left: 740px;
