--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Turkeythanks</title>
-  <%= stylesheet_link_tag "application", media: "all" %>
-  <%= javascript_include_tag 'https://js.stripe.com/v1/' %>
+  <title>happymerryholidays</title>
+  <%= stylesheet_link_tag "application"%>
   <%= csrf_meta_tags %>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
+  <link rel="stylesheet" type="text/css" href="../../assets/welcome.css.scss">
 
-  <link rel="stylesheet" href="turkey.css" media="screen" />
-  <script type="text/javascript" src="turkey.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <link href='http://fonts.googleapis.com/css?family=Trade+Winds' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Loved+by+the+King' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
