--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,53 +1,5 @@
-<h1>Happy Thanksgiving!</h1>
-<div class="butt">
-<div class="legs">
-  <div class="left_leg">
-    <div class="left_foot">
-      <div class="toe"></div>
-      <div class="toe"></div>
-      <div class="toe"></div>
-    </div>
-  </div>
-  <div class="right_leg">
-    <div class="right_foot">
-      <div class="toe"></div>
-      <div class="toe"></div>
-      <div class="toe"></div>
-    </div>
-  </div>
-</div>
-</div>
-<div class="tail">
-  <div class="feather"></div>
-  <div class="feather"></div>
-  <div class="feather"></div>
-  <div class="feather"></div>
-  <div class="feather"></div>
-  <div class="feather"></div>
-  <div class="feather"></div>
-  <div class="feather"></div>
-  <div class="feather"></div>
-</div>
-<div class="wings"></div>
-<div class="head">
-  <div class="eyes">
-    <div class="left_eye">
-      <div class="left_iris"></div>
-      <div class="closed"></div>
-    </div>
-    <div class="right_eye">
-      <div class="right_iris"></div>
-      <div class="closed"></div>
-    </div>
-  </div>
-  <div class="beak">
-    <div class="beak_tip"></div>
-  </div>
-  <div class="red_things">
-  </div>
-</div>
+Welcome! Make a card!
 
-<div class="speech_bubble">
-  <div class="inner_speech_bubble"></div>
-</div>
-<div class="invite">I'm thankful for you!</div>
+<%= link_to "Thanksgiving Card", "thanksgiving/new" %>
+<%= link_to "Christmas Card", "christmas/new" %>
+<%= link_to "Hannukah Card", "hannukah/new" %>
