--- a/app/views/cards/thanksgiving.html.erb
+++ b/app/views/cards/thanksgiving.html.erb
@@ -1,7 +1,7 @@
 <head>
-  <link rel="stylesheet" href="../../assets/thanksgiving.css.scss" media="screen" />
   <link href='http://fonts.googleapis.com/css?family=Trade+Winds' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Loved+by+the+King' rel='stylesheet' type='text/css'>
+  <%= stylesheet_link_tag 'thanksgiving' %>
 </head>
 <div class='background'>
 
