--- a/app/assets/stylesheets/christmas.css.scss
+++ b/app/assets/stylesheets/christmas.css.scss
@@ -217,6 +217,7 @@ html,body {
 /* __________ MOON ________*/
 .moon{
   position: absolute;
+  z-index: 1;
   right: 40px;
   top: 40px;
   height: 60px;
@@ -335,11 +336,7 @@ html,body {
 }
 
 .shadow {
-   -webkit-box-shadow: inset 0 0 2px #b50303;
-      -moz-box-shadow: inset 0 0 2px #b50303;
-       -ms-box-shadow: inset 0 0 2px #b50303;
-        -o-box-shadow: inset 0 0 2px #b50303;
-           box-shadow: inset 0 0 2px #b50303;
+   @include box-shadow-inset( 0, 0, 2px, 0, #b50303);
 }
 
 /* MESSAGE AREA  */
@@ -640,17 +637,9 @@ html,body {
 }
 .red{
   background-color: red;
-  -webkit-box-shadow: inset 0 0 5px #6e0000;
-     -moz-box-shadow: inset 0 0 5px #6e0000;
-      -ms-box-shadow: inset 0 0 5px #6e0000;
-       -o-box-shadow: inset 0 0 5px #6e0000;
-          box-shadow: inset 0 0 5px #6e0000;
+  @include box-shadow-inset( 0, 0, 5px, 0, #6e0000);
  & .twinkle {
-    -webkit-box-shadow: inset 0 0 1px red;
-       -moz-box-shadow: inset 0 0 1px red;
-        -ms-box-shadow: inset 0 0 1px red;
-         -o-box-shadow: inset 0 0 1px red;
-            box-shadow: inset 0 0 1px red;
+    @include box-shadow-inset( 0, 0, 1px, 0, red);
   }
 }
 .red-ornaments{
@@ -679,17 +668,9 @@ html,body {
 }
 .gold{
   background-color: gold;
-  -webkit-box-shadow: inset 0 0 5px #705a29;
-     -moz-box-shadow: inset 0 0 5px #705a29;
-      -ms-box-shadow: inset 0 0 5px #705a29;
-       -o-box-shadow: inset 0 0 5px #705a29;
-          box-shadow: inset 0 0 5px #705a29;
+  @include box-shadow-inset( 0, 0, 5px, 0, #705a29);
   & .twinkle {
-    -webkit-box-shadow: inset 0 0 1px gold;
-       -moz-box-shadow: inset 0 0 1px gold;
-        -ms-box-shadow: inset 0 0 1px gold;
-         -o-box-shadow: inset 0 0 1px gold;
-            box-shadow: inset 0 0 1px gold;
+    @include box-shadow-inset( 0, 0, 1px, 0, gold);
   }
 }
 .gold-ornaments{
@@ -717,17 +698,9 @@ html,body {
 }
 .blue{
   background-color: blue;
-  -webkit-box-shadow: inset 0 0 5px #021183;
-     -moz-box-shadow: inset 0 0 5px #021183;
-      -ms-box-shadow: inset 0 0 5px #021183;
-       -o-box-shadow: inset 0 0 5px #021183;
-          box-shadow: inset 0 0 5px #021183;
+  @include box-shadow-inset( 0, 0, 5px, 0, #021183);
   & .twinkle {
-    -webkit-box-shadow: inset 0 0 1px blue;
-       -moz-box-shadow: inset 0 0 1px blue;
-        -ms-box-shadow: inset 0 0 1px blue;
-         -o-box-shadow: inset 0 0 1px blue;
-            box-shadow: inset 0 0 1px blue;
+    @include box-shadow-inset( 0, 0, 1px, 0, blue);
   }
 }
 .blue-ornaments{
