removed unused divs from views

--- a/app/views/cards/christmas.html.erb
+++ b/app/views/cards/christmas.html.erb
@@ -50,18 +50,8 @@
   <div></div>
 </div>
 <div class="snowy foreground">
-  <div class="big-hill">
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
-  <div class="left-hill">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
+  <div class="big-hill"></div>
+  <div class="left-hill"></div>
   <div class="right-hill">
     <div></div>
     <div ></div>
@@ -128,10 +118,6 @@
         <div class="width"></div>
       </div>
     </div>
-<!--     <div class="bulbs">
-      <div class="bulb1"></div>
-    </div> -->
-
 
     <div class="tree-top"></div>
     <div class="top-decoration">
@@ -175,12 +161,11 @@
     </div>
     <div class="stump"></div>
   </div>
-</div>
 
-<div class="striped-present">
-  <div class="present-front shadow">
-    <div class="stripe"></div>
-    <div class="bow"></div>
+  <div class="striped-present">
+    <div class="present-front shadow">
+      <div class="stripe"></div>
+      <div class="bow"></div>
+    </div>
   </div>
 </div>
-<div class="present"></div>
