--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,6 @@
-Welcome! Make a card!
 
-<%= link_to "Thanksgiving Card", "thanksgiving/new" %>
-<%= link_to "Christmas Card", "christmas/new" %>
-<%= link_to "Hannukah Card", "hannukah/new" %>
+<div class="cards">
+  <%= link_to "Thanksgiving Card", "thanksgiving/new" %>
+  <%= link_to "Christmas Card", "christmas/new" %>
+  <%= link_to "Hannukah Card", "hannukah/new" %>
+</div>
