--- a/app/assets/stylesheets/christmas.css.scss
+++ b/app/assets/stylesheets/christmas.css.scss
@@ -44,12 +44,9 @@ html,body {
   -webkit-animation-iteration-count: infinite;
 }
 .sky {
-  position: absolute;
   width: 100%;
   height: 100%;
-  top:0;
-  left:0;
-  right:0;
+  min-height: 40em;
   background-color: #0f3254;
 }
 .sky div{
@@ -237,14 +234,24 @@ html,body {
   }
 }
 /* __________ SNOWY BACKGROUND ________*/
-.backdrop{
+
+.snowy{
   position: absolute;
-  top: 32em;
+  top: 35em;
   left: 0;
   right: 0;
   bottom: 0;
   width: 100%;
   height: 300px;
+}
+
+.backdrop{
+  position: absolute;
+  top: 35em;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
   background-color: #a7beda;
   & div{
     &:nth-child(1){
@@ -283,15 +290,6 @@ html,body {
   }
 }
 
-.snowy{
-  position: absolute;
-  top: 35em;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 300px;
-}
 .foreground{
   background-color: #f5f5f5;
   & .big-hill{
@@ -316,21 +314,15 @@ html,body {
     border-top-left-radius: 150px;
     border-top-right-radius: 300px;
   }
-  & .right-hill div{
-    /*Left Hill*/
+  & .right-hill{
     position: absolute;
-    right: 0;
-    &:nth-child(1){
-      position: absolute;
-      background-color: #f5f5f5;
-      height: 120px;
-      width: 160px;
-      /*border-top-left-radius: 50px;*/
-      border-top-right-radius: 105px;
-      border-top-left-radius: 85px;
-      top:-50px;
-      right: -20px;
-    }
+    background-color: #f5f5f5;
+    height: 120px;
+    width: 160px;
+    border-top-right-radius: 105px;
+    border-top-left-radius: 85px;
+    top:-50px;
+    right: -20px;
   }
 }
 
@@ -342,10 +334,7 @@ html,body {
 
 .message {
   position: absolute;
-  /*overflow-x: auto;*/
   padding: 20px;
-/*  height: 60%;
-  min-height: 200px;*/
   width: 30%;
   min-width: 280px;
   left: 500px;
@@ -388,7 +377,7 @@ html,body {
 .striped-present{
   position: absolute;
   border-radius: 1px;
-  top: 35em;
+  top: 30em;
   left: 4em;
   z-index: 12;
 }
