--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,7 @@
-
+<head>
+  <link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
+  <%= stylesheet_link_tag 'welcome_index' %>
+</head>
 <div class="cards">
   <%= link_to "Thanksgiving Card", "thanksgiving/new" %>
   <%= link_to "Christmas Card", "christmas/new" %>
