added body, html stylings to application.css

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,7 +12,15 @@
 
 @import "christmas";
 @import "thanksgiving";
+@import "welcome_index";
 
 .hide{
   display: none;
+}
+
+html,body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
 }
