--- a/app/views/cards/christmas.html.erb
+++ b/app/views/cards/christmas.html.erb
@@ -32,13 +32,19 @@
   <!-- star 10 - 19/20 -->
   <div class="twinkler pulse7"></div>
   <div class="twinkler pulse7"></div>
-  <!-- star 20 - 21/22 -->
+  <!-- star 11 - 21/22 -->
   <div class="twinkler pulse5"></div>
   <div class="twinkler pulse5"></div>
-  <!-- star 21 - 23/24 -->
+  <!-- star 12 - 23/24 -->
   <div class="twinkler pulse4"></div>
   <div class="twinkler pulse4"></div>
-  <!-- star 22 - 25/26 -->
+  <!-- star 13 - 25/26 -->
+  <div class="twinkler pulse6"></div>
+  <div class="twinkler pulse6"></div>
+  <!-- star 14 - 27/28 -->
+  <div class="twinkler pulse6"></div>
+  <div class="twinkler pulse6"></div>
+  <!-- star 15 - 29/30 -->
   <div class="twinkler pulse6"></div>
   <div class="twinkler pulse6"></div>
   <div class="moon"></div>
