put turkey into a div.turkey

--- a/app/views/cards/thanksgiving.html.erb
+++ b/app/views/cards/thanksgiving.html.erb
@@ -6,54 +6,55 @@
 <div class='background'>
 
   <h1>Happy Thanksgiving!</h1>
-  <div class="butt">
-  <div class="legs">
-    <div class="left_leg">
-      <div class="left_foot">
-        <div class="toe"></div>
-        <div class="toe"></div>
-        <div class="toe"></div>
+  <div class="turkey">
+    <div class="butt">
+    <div class="legs">
+      <div class="left_leg">
+        <div class="left_foot">
+          <div class="toe"></div>
+          <div class="toe"></div>
+          <div class="toe"></div>
+        </div>
+      </div>
+      <div class="right_leg">
+        <div class="right_foot">
+          <div class="toe"></div>
+          <div class="toe"></div>
+          <div class="toe"></div>
+        </div>
       </div>
     </div>
-    <div class="right_leg">
-      <div class="right_foot">
-        <div class="toe"></div>
-        <div class="toe"></div>
-        <div class="toe"></div>
+    </div>
+    <div class="tail">
+      <div class="feather"></div>
+      <div class="feather"></div>
+      <div class="feather"></div>
+      <div class="feather"></div>
+      <div class="feather"></div>
+      <div class="feather"></div>
+      <div class="feather"></div>
+      <div class="feather"></div>
+      <div class="feather"></div>
+    </div>
+    <div class="wings"></div>
+    <div class="head">
+      <div class="eyes">
+        <div class="left_eye">
+          <div class="left_iris"></div>
+          <div class="closed"></div>
+        </div>
+        <div class="right_eye">
+          <div class="right_iris"></div>
+          <div class="closed"></div>
+        </div>
+      </div>
+      <div class="beak">
+        <div class="beak_tip"></div>
+      </div>
+      <div class="red_things">
       </div>
     </div>
   </div>
-  </div>
-  <div class="tail">
-    <div class="feather"></div>
-    <div class="feather"></div>
-    <div class="feather"></div>
-    <div class="feather"></div>
-    <div class="feather"></div>
-    <div class="feather"></div>
-    <div class="feather"></div>
-    <div class="feather"></div>
-    <div class="feather"></div>
-  </div>
-  <div class="wings"></div>
-  <div class="head">
-    <div class="eyes">
-      <div class="left_eye">
-        <div class="left_iris"></div>
-        <div class="closed"></div>
-      </div>
-      <div class="right_eye">
-        <div class="right_iris"></div>
-        <div class="closed"></div>
-      </div>
-    </div>
-    <div class="beak">
-      <div class="beak_tip"></div>
-    </div>
-    <div class="red_things">
-    </div>
-  </div>
-
   <div class="speech_bubble">
     <div class="inner_speech_bubble"></div>
     <div class="invite">I'm thankful for you!</div>
