--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,78 @@
   <%= stylesheet_link_tag 'welcome_index' %>
 </head>
 <div class="cards">
-  <%= link_to "Thanksgiving Card", "thanksgiving/new" %>
-  <%= link_to "Christmas Card", "christmas/new" %>
-  <%= link_to "Hannukah Card", "hannukah/new" %>
+  <a href="thanksgiving/new">
+    <div class="turkey">
+      <div class="butt">
+      <div class="legs">
+        <div class="left_leg">
+          <div class="left_foot">
+            <div class="toe"></div>
+            <div class="toe"></div>
+            <div class="toe"></div>
+          </div>
+        </div>
+        <div class="right_leg">
+          <div class="right_foot">
+            <div class="toe"></div>
+            <div class="toe"></div>
+            <div class="toe"></div>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div class="tail">
+        <div class="feather"></div>
+        <div class="feather"></div>
+        <div class="feather"></div>
+        <div class="feather"></div>
+        <div class="feather"></div>
+        <div class="feather"></div>
+        <div class="feather"></div>
+        <div class="feather"></div>
+        <div class="feather"></div>
+      </div>
+      <div class="wings"></div>
+      <div class="head">
+        <div class="eyes">
+          <div class="left_eye">
+            <div class="left_iris"></div>
+            <div class="closed"></div>
+          </div>
+          <div class="right_eye">
+            <div class="right_iris"></div>
+            <div class="closed"></div>
+          </div>
+        </div>
+        <div class="beak">
+          <div class="beak_tip"></div>
+        </div>
+        <div class="red_things">
+        </div>
+      </div>
+    </div>
+  </a>
+  <a href="christmas/new">
+    <div class="christmas">
+      <div class="tree">
+        <div class="top">
+          <div class="tree-top-left"></div>
+          <div class="tree-top-right"></div>
+        </div>
+        <div class="top-middle">
+          <div class="tree-top-middle-left"></div>
+          <div class="tree-top-middle-right"></div>
+        </div>
+        <div class="bottom-middle">
+          <div class="tree-bottom-middle-left"></div>
+          <div class="tree-bottom-middle-right"></div>
+        </div>
+        <div class="bottom">
+          <div class="tree-bottom-left"></div>
+          <div class="tree-bottom-right"></div>
+        </div>
+        <div class="stump"></div>
+      </div>
+    </div>
+  </a>
 </div>
