adjusted html in welcome_index.html for responsive design

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,8 +3,8 @@
   <%= stylesheet_link_tag 'welcome_index' %>
 </head>
 <div class="cards">
-  <a href="thanksgiving/new">
-    <div class="turkey">
+  <a class="turkey" href="thanksgiving/new">
+    <div>
       <div class="butt">
       <div class="legs">
         <div class="left_leg">
@@ -54,8 +54,8 @@
       </div>
     </div>
   </a>
-  <a href="christmas/new">
-    <div class="christmas">
+  <a class="christmas" href="christmas/new">
+    <div>
       <div class="tree">
         <div class="top">
           <div class="tree-top-left"></div>
