height adjustment for mobile device

--- a/app/assets/stylesheets/welcome_index.css.scss
+++ b/app/assets/stylesheets/welcome_index.css.scss
@@ -886,11 +886,11 @@ and (max-device-width : 480px) {
     top: 10%;
   }
   .turkey{
-    left: 25%;
-    top: 20em;
+    left: 26%;
+    top: 15em;
   }
   .christmas{
-    top:   2em;
+    top:   0;
     left: 30%;
   }
 }
