--- a/app/assets/stylesheets/welcome_index.css.scss
+++ b/app/assets/stylesheets/welcome_index.css.scss
@@ -882,6 +882,9 @@ and (max-device-width : 480px) {
 
 /* Smartphones (landscape) ----------- */
 @media only screen and (max-width : 480px) {
+  html, body{
+    overflow-y: auto;
+  }
   .cards{
     top: 10%;
   }
@@ -895,6 +898,9 @@ and (max-device-width : 480px) {
   }
 }
 @media only screen and (min-width : 481px) and (max-width : 720px) {
+  html, body{
+    overflow-y: auto;
+  }
   .christmas{
     left: 20%;
   }
