changed render partial: @partial to render @partial in christmas.html

--- a/app/views/cards/christmas.html.erb
+++ b/app/views/cards/christmas.html.erb
@@ -69,7 +69,7 @@
       <p class="error"> <%= error %> </p>
     <% end %>
   <% end %>
-  <%= render partial: @partial, card: @card%>
+  <%= render @partial, card: @card%>
 </div>
 <div class="tree-options">
   <div class="triangle-tree">
