gave all welcome_index classes 'small-' addition to deal with overlapping styles

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,78 +2,78 @@
   <link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag 'welcome_index' %>
 </head>
-<div class="cards">
-  <a class="turkey" href="thanksgiving/new">
+<div class="small-cards">
+  <a class="small-turkey" href="thanksgiving/new">
     <div>
-      <div class="butt">
-      <div class="legs">
-        <div class="left_leg">
-          <div class="left_foot">
-            <div class="toe"></div>
-            <div class="toe"></div>
-            <div class="toe"></div>
+      <div class="small-butt">
+      <div class="small-legs">
+        <div class="small-left_leg">
+          <div class="small-left_foot">
+            <div class="small-toe"></div>
+            <div class="small-toe"></div>
+            <div class="small-toe"></div>
           </div>
         </div>
-        <div class="right_leg">
-          <div class="right_foot">
-            <div class="toe"></div>
-            <div class="toe"></div>
-            <div class="toe"></div>
+        <div class="small-right_leg">
+          <div class="small-right_foot">
+            <div class="small-toe"></div>
+            <div class="small-toe"></div>
+            <div class="small-toe"></div>
           </div>
         </div>
       </div>
       </div>
-      <div class="tail">
-        <div class="feather"></div>
-        <div class="feather"></div>
-        <div class="feather"></div>
-        <div class="feather"></div>
-        <div class="feather"></div>
-        <div class="feather"></div>
-        <div class="feather"></div>
-        <div class="feather"></div>
-        <div class="feather"></div>
+      <div class="small-tail">
+        <div class="small-feather"></div>
+        <div class="small-feather"></div>
+        <div class="small-feather"></div>
+        <div class="small-feather"></div>
+        <div class="small-feather"></div>
+        <div class="small-feather"></div>
+        <div class="small-feather"></div>
+        <div class="small-feather"></div>
+        <div class="small-feather"></div>
       </div>
-      <div class="wings"></div>
-      <div class="head">
-        <div class="eyes">
-          <div class="left_eye">
-            <div class="left_iris"></div>
-            <div class="closed"></div>
+      <div class="small-wings"></div>
+      <div class="small-head">
+        <div class="small-eyes">
+          <div class="small-left_eye">
+            <div class="small-left_iris"></div>
+            <div class="small-closed"></div>
           </div>
-          <div class="right_eye">
-            <div class="right_iris"></div>
-            <div class="closed"></div>
+          <div class="small-right_eye">
+            <div class="small-right_iris"></div>
+            <div class="small-closed"></div>
           </div>
         </div>
-        <div class="beak">
-          <div class="beak_tip"></div>
+        <div class="small-beak">
+          <div class="small-beak_tip"></div>
         </div>
-        <div class="red_things">
+        <div class="small-red_things">
         </div>
       </div>
     </div>
   </a>
-  <a class="christmas" href="christmas/new">
+  <a class="small-christmas" href="christmas/new">
     <div>
-      <div class="tree">
-        <div class="top">
-          <div class="tree-top-left"></div>
-          <div class="tree-top-right"></div>
+      <div class="small-tree">
+        <div class="small-top">
+          <div class="small-tree-top-left"></div>
+          <div class="small-tree-top-right"></div>
         </div>
-        <div class="top-middle">
-          <div class="tree-top-middle-left"></div>
-          <div class="tree-top-middle-right"></div>
+        <div class="small-top-middle">
+          <div class="small-tree-top-middle-left"></div>
+          <div class="small-tree-top-middle-right"></div>
         </div>
-        <div class="bottom-middle">
-          <div class="tree-bottom-middle-left"></div>
-          <div class="tree-bottom-middle-right"></div>
+        <div class="small-bottom-middle">
+          <div class="small-tree-bottom-middle-left"></div>
+          <div class="small-tree-bottom-middle-right"></div>
         </div>
-        <div class="bottom">
-          <div class="tree-bottom-left"></div>
-          <div class="tree-bottom-right"></div>
+        <div class="small-bottom">
+          <div class="small-tree-bottom-left"></div>
+          <div class="small-tree-bottom-right"></div>
         </div>
-        <div class="stump"></div>
+        <div class="small-stump"></div>
       </div>
     </div>
   </a>
