--- a/app/assets/stylesheets/thanksgiving.css.scss
+++ b/app/assets/stylesheets/thanksgiving.css.scss
@@ -21,6 +21,8 @@ html,body {
   background-repeat: repeat;
 }
 h1{
+  position: absolute;
+  z-index: 12;
   width: 100%;
   margin-left: 100px;
   min-width: 900px;
@@ -33,8 +35,8 @@ h1{
 }
 .turkey{
   z-index: 1;
-  position: relative;
-  top: 6em;
+  position: absolute;
+  bottom: 1.5em;
   left: 5em;
 }
 .invite{
