--- a/app/assets/stylesheets/thanksgiving.css.scss
+++ b/app/assets/stylesheets/thanksgiving.css.scss
@@ -36,8 +36,8 @@ h1{
 .turkey{
   z-index: 1;
   position: absolute;
-  bottom: 1.5em;
-  left: 5em;
+  bottom: 5%;
+  left: 0;
 }
 .invite{
   position: absolute;
@@ -50,8 +50,8 @@ h1{
 .speech_bubble {
   z-index: 2;
   position: absolute;
-  top: 350px;
-  left: 700px;
+  top: 320px;
+  left: 600px;
   width: 320px;
   height: 280px;
   background: #764000;
@@ -69,7 +69,7 @@ h1{
   border-top: 26px solid transparent;
   border-right: 52px solid #764000;
   border-bottom: 26px solid transparent;
-  margin: 13px 0 0 -45px;
+  margin: 30px 0 0 -45px;
   opacity: .9;
 }
 .inner_speech_bubble {
@@ -93,7 +93,7 @@ h1{
   border-top: 26px solid transparent;
   border-right: 52px solid #fff0dd;
   border-bottom: 26px solid transparent;
-  margin: 13px 0 0 -40px;
+  margin: 30px 0 0 -40px;
 }
 .head {
   position: absolute;
